kubernetes/k8s-manifests/botapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: personal-assitant-botapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: personal-assitant-botapi
  template:
    metadata:
      labels:
        app: personal-assitant-botapi
    spec:
      containers:
        - name: personal-assitant-botapi
          image: shwme1nilrepeat/personal-assistant-botapi:latest
          args: [ "./botapi-main" ] # Запуск BotAPI сервиса
          ports:
            - containerPort: 8080 # Пример порта для BotAPI сервиса
