kubernetes/k8s-manifests/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: personal-assitant-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: personal-assitant-frontend
  template:
    metadata:
      labels:
        app: personal-assitant-frontend
    spec:
      containers:
        - name: personal-assitant-frontend
          image: shwme1nilrepeat/personal-assistant-frontend:latest
          ports:
            - containerPort: 80
