kubernetes/k8s-manifests/grpc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: personal-assitant-grpc
spec:
  replicas: 2
  selector:
    matchLabels:
      app: personal-assitant-grpc
  template:
    metadata:
      labels:
        app: personal-assitant-grpc
    spec:
      containers:
        - name: personal-assitant-grpc
          image: personal-assitant-grpc:latest
          ports:
            - containerPort: 50051
---
