kubernetes/k8s-manifests/postgres-demployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: personal-assitant-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: personal-assitant-postgres
  template:
    metadata:
      labels:
        app: personal-assitant-postgres
    spec:
      containers:
        - name: personal-assitant-postgres
          image: personal-assitant-postgres:latest
          ports:
            - containerPort: 15432
