kubernetes/k8s-manifests/elasticsearch-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-service
spec:
  selector:
    app: personal-assitant-elasticsearch
  ports:
    - protocol: TCP
      port: 16379
      targetPort: 16379
