kubernetes/k8s-manifests/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: personal-assitant-frontend
  ports:
    - port: 80
      targetPort: 80
