kubernetes/k8s-manifests/ingress-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
 name: ingress-loadbalancer
spec:
 type: LoadBalancer
 loadBalancerIP: 85.12.195.230
 ports:
 - port: 80
   targetPort: 80
   protocol: TCP
   name: http
 - port: 443
   targetPort: 443
   protocol: TCP
   name: https
 selector:
   app: grpc-ingress
