kubernetes/k8s-manifests/postgre-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  selector:
    app: personal-assistant-postgres
  ports:
    - port: 5432
      targetPort: 5432
