kubernetes/k8s-manifests/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  selector:
    app: personal-assitant-redis
  ports:
    - protocol: TCP
      port: 9200
      targetPort: 9200
